--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="seguridad, seguridad electronica, camaras, alarmas, cerco electrico, proteccion">
     <title>SEGURIDAR-Seguridad Electronica</title>
     <link rel="shortcut icon" href="imagenes/logo cam barra.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/4cb147f19a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
